--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "sequelize": "^6.21.0"
