--- a/.sequelizerc
+++ b/.sequelizerc
@@ -2,4 +2,7 @@ require('dotenv').config();
 
 module.exports = {
   'url': process.env.DATABASE_URL,
+  'models-path': path.resolve('src/db/models'),
+  'seeders-path': path.resolve('src/db/seeders'),
+  'migrations-path': path.resolve('src/db/migrations'),
 };
