--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint . --ext .js",
     "migrate:up": "npx sequelize-cli db:migrate",
     "migrate:undo": "npx sequelize-cli db:migrate:undo",
-    "start": "nodemon app.js",
+    "start": "nodemon ./src/app.js",
     "test": "jest"
   },
   "repository": {
