--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --ext .js",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "jest"
   },
   "repository": {
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/umtaldejr/money-tracker-be#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
