--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,5 +1,7 @@
 require('dotenv').config();
 
+const path = require('path');
+
 module.exports = {
   'url': process.env.DATABASE_URL,
   'models-path': path.resolve('src/db/models'),
